[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Enemigos/spr_enemigo_prueba.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Nivel2Enemigo1/Nivel2Enemigo2Control.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Nivel2Enemigo1/Nivel2Enemigo1LenguaControl.gd" type="Script" id=3]
[ext_resource path="res://Objects/PowerUp.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Enemigos/Nivel2/Lagarto_2_cabeza.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemigos/Nivel2/Lagarto_2_cuerpo.png" type="Texture" id=6]
[ext_resource path="res://Objects/Enemigos/Nivel2Enemigo2Muerto.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5339, 23.0658 )

[sub_resource type="Animation" id=2]
resource_name = "anim_lengua_ataque_1"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Rotables/Lengua/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.1 ), Vector2( 3.806, 0.1 ), Vector2( 0.3, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotables/Lengua/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -89, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rotables/Mandibula:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -22.7079, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Rotables/Cabeza:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 23.4068, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Rotables/Lengua/Punta:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -89, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.58475, 3.62948 )

[sub_resource type="Animation" id=4]
resource_name = "anim_nivel_2_enemigo_2_vuelo"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Nivel2Enemigo2" type="Area2D" groups=[
"enemigos",
]]
script = ExtResource( 2 )
powerUp = ExtResource( 4 )
cuerpo = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.214638, 16.7418 )
shape = SubResource( 1 )

[node name="AnimacionAtaque" type="AnimationPlayer" parent="."]
anims/anim_lengua_ataque_1 = SubResource( 2 )

[node name="TiempoEntreAtaques" type="Timer" parent="."]
one_shot = true

[node name="Rotables" type="Node2D" parent="."]

[node name="Lengua" type="Area2D" parent="Rotables" groups=[
"enemigos",
]]
script = ExtResource( 3 )

[node name="Punta" type="Sprite" parent="Rotables/Lengua"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Rotables/Lengua"]
position = Vector2( 3.63814, -0.0280294 )
scale = Vector2( 0.3, 0.1 )
texture = ExtResource( 1 )
offset = Vector2( -12.1271, 0.0934315 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotables/Lengua"]
shape = SubResource( 3 )

[node name="Mandibula" type="Sprite" parent="Rotables"]
position = Vector2( 7.0077, 2.27744 )
texture = ExtResource( 5 )
offset = Vector2( -6.64144, -2.27744 )
hframes = 2
frame = 1

[node name="Cabeza" type="Sprite" parent="Rotables"]
position = Vector2( 7.0077, 2.27744 )
texture = ExtResource( 5 )
offset = Vector2( -6.64144, -2.27744 )
hframes = 2

[node name="Cuerpo" type="Sprite" parent="."]
position = Vector2( -0.858559, 19.5321 )
z_index = -1
texture = ExtResource( 6 )
hframes = 2

[node name="AnimacionVuelo" type="AnimationPlayer" parent="."]
autoplay = "anim_nivel_2_enemigo_2_vuelo"
anims/anim_nivel_2_enemigo_2_vuelo = SubResource( 4 )
[connection signal="timeout" from="TiempoEntreAtaques" to="." method="_on_TiempoEntreAtaques_timeout"]
[connection signal="lengua_destruida" from="Rotables/Lengua" to="." method="_on_Lengua_lengua_destruida"]
